--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,35 +13,68 @@ jobs:
  
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
  
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::650251701672:role/s3-github
           aws-region: us-east-2
-
+ 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.10.5
+          
+      - name: Terraform formtat (Create EC2)
+        run: terraform fmt
+        
 
+      - name: Terraform init (Create EC2)
+        run: terraform init
+        
+      - name: Terraform validate 
+        run: terraform validate 
+
+      # - name: Terraform plan (Create EC2)
+      #   run: terraform plan
+        
+      # - name: Install tflint
+      #   run: |
+      #        curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      # - name: Run tflint with custom config
+      #   run: |
+      #     echo "Using custom rules from .tflint.hcl"
+      #     tflint --config=./.tflint.hcl
+      #   continue-on-error: true
+      - name: Install terraform-docs
+        run: |
+            curl -s https://raw.githubusercontent.com/terraform-docs/terraform-docs/master/scripts/install.sh
+ 
+      - name: Generate Terraform docs
+        run: terraform-docs markdown . > README.md
+ 
+      - name: Commit docs
+        if: github.ref == 'refs/heads/main'
+        run: |
+             git config user.name "GitHub Actions"
+             git config user.email "actions@github.com"
+             git add README.md
+             git diff --cached --quiet || git commit -m "Update Terraform docs"
+             git push
+             
       - name: Generate terraform docs
-        uses: terraform-docs/gh-actions@main
-        with:           
-          working-dir: .
-          git-push: true
-          output-file: README.md
-          output-method: inject
-          config-file: disabled
-          atlantis-file: disabled
-          find-dir: disabled
-          recursive: false
-          recursive-path: modules
-          output-format: markdown table
-          output-template: <!-- BEGIN_TF_DOCS -->\n{{ .Content }}\n<!-- END_TF_DOCS -->"
-          indention: 2
-          git-commit-message: terraform-docs:automated action
-          git-push-sign-off: false
-          fail-on-diff: false
+        uses: terraform-docs/gh-actions@v1.0.0
+        with:
+           working-dir: ./modules/vpc
+           output-file: README.md
+           output-method: replace
+          
+      - name: Terraform Apply (Create EC2)
+        run: terraform apply -auto-approve
+        
+      - name: Terraform destroy (Create EC2)
+        run: terraform destroy -auto-approve
+
       
