--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Terraform init (Create EC2)
         run: terraform init
         
-      - name: Terraform Apply 
-        run: terraform apply -auto-approve
+      - name: Terraform Destroy 
+        run: terraform destroy -auto-approve
       
