--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,16 @@ jobs:
       - name: Terraform init (Create EC2)
         run: terraform init
         
-      - name: Terraform Apply 
-        run: terraform apply -auto-approve
+      - name: Install tflint
+        run: |
+             curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      - name: Run tflint with custom config
+        run: |
+          echo "Using custom rules from .tflint.hcl"
+          tflint --config=./.tflint.hcl
+        continue-on-error: true
+        
+      - name: Terraform Destroy 
+        run: terraform destroy -auto-approve
       
